# lemonsqueezy.py

./: .gitignore  LICENSE  pyproject.toml
.github/workflows/: main.yml
src/lemonsqueezy/: __init__.py
src/lemonsqueezy/types/: api.py  methods.py
tests/: utils.py
tests/lemonsqueezy/: conftest.py  test_build_params.py  test_get_product.py  test_get_products.py  test_get_user.py  test_query.py
tests/lemonsqueezy/api/: test_get_store.py  test_get_stores.py
